Fix scroll on mobile issue?

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     font-style: normal;
 }
 
-html, body, .container {
+body {
     max-width: 100%;
     overflow-x: hidden;
 }
